--- a/restaurant/src/main/resources/templates/admin.html
+++ b/restaurant/src/main/resources/templates/admin.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
-    <title>餐厅点餐系统</title>
+    <title>Restaurant order system</title>
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport"
@@ -17,7 +17,6 @@
 <div id="LAY_app">
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
-            <!-- 头部区域 -->
             <ul class="layui-nav layui-layout-left">
                 <li class="layui-nav-item layadmin-flexible" lay-unselect>
                     <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
@@ -25,7 +24,7 @@
                     </a>
                 </li>
                 <li class="layui-nav-item" lay-unselect>
-                    <a href="javascript:;" layadmin-event="refresh" title="刷新">
+                    <a href="javascript:;" layadmin-event="refresh" title="Refresh">
                         <i class="layui-icon layui-icon-refresh-3"></i>
                     </a>
                 </li>
@@ -52,9 +51,9 @@
                         <cite th:text="${session.user.name}"></cite>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a th:attr="lay-href=@{/user/curuserinfo.html}">个人资料</a></dd>
-                        <dd><a th:attr="lay-href=@{/user/updatepwd.html}">修改密码</a></dd>
-                        <dd layadmin-event="logout" style="text-align: center;"><a th:href="@{/sysuser/logout.do}">退出</a></dd>
+                        <dd><a th:attr="lay-href=@{/user/curuserinfo.html}">Personal information</a></dd>
+                        <dd><a th:attr="lay-href=@{/user/updatepwd.html}">Change password</a></dd>
+                        <dd layadmin-event="logout" style="text-align: center;"><a th:href="@{/sysuser/logout.do}">Quit</a></dd>
                     </dl>
                 </li>
 
@@ -67,11 +66,10 @@
             </ul>
         </div>
 
-        <!-- 侧边菜单 -->
         <div class="layui-side layui-side-menu">
             <div class="layui-side-scroll">
                 <div class="layui-logo" lay-href="home/console.html">
-                    <span>餐厅点餐系统</span>
+                    <span>Restaurant order system</span>
                 </div>
 
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu"
@@ -79,15 +77,14 @@
                     <li data-name="home" class="layui-nav-item layui-nav-itemed">
                         <a href="javascript:;" lay-tips="主页" lay-direction="2">
                             <i class="layui-icon layui-icon-home"></i>
-                            <cite>主页</cite>
+                            <cite>Main page</cite>
                         </a>
                         <dl class="layui-nav-child">
                             <dd data-name="console" class="layui-this">
-                                <a th:href="@{/sysuser/console.html}" lay-href="home/console.html" target="mainFrame">控制台</a>
+                                <a th:href="@{/sysuser/console.html}" lay-href="home/console.html" target="mainFrame">Control panel</a>
                             </dd>
                         </dl>
                     </li>
-                    <!--动态菜单-->
                     <th:block th:each="menu:${menuList}">
                         <li data-name="component" class="layui-nav-item">
                             <a href="javascript:;" th:attr="lay-tips=${menu.menuName}" lay-direction="2">
@@ -111,7 +108,6 @@
                 </ul>
             </div>
         </div>
-        <!-- 页面标签 -->
         <div class="layadmin-pagetabs" id="LAY_app_tabs">
             <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
             <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
@@ -120,9 +116,9 @@
                     <li class="layui-nav-item" lay-unselect>
                         <a href="javascript:;"></a>
                         <dl class="layui-nav-child layui-anim-fadein">
-                            <dd layadmin-event="closeThisTabs"><a href="javascript:;">关闭当前标签页</a></dd>
-                            <dd layadmin-event="closeOtherTabs"><a href="javascript:;">关闭其它标签页</a></dd>
-                            <dd layadmin-event="closeAllTabs"><a href="javascript:;">关闭全部标签页</a></dd>
+                            <dd layadmin-event="closeThisTabs"><a href="javascript:;">Close current tab</a></dd>
+                            <dd layadmin-event="closeOtherTabs"><a href="javascript:;">Close other tab</a></dd>
+                            <dd layadmin-event="closeAllTabs"><a href="javascript:;">Close all tab</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -134,10 +130,8 @@
                 </ul>
             </div>
         </div>
-        <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
             <div class="layadmin-tabsbody-item layui-show">
-                <!--home/console.html-->
                 <iframe name="mainFrame" th:src="@{/sysuser/console.html}" src="" frameborder="0"
                         class="layadmin-iframe">
 
@@ -145,16 +139,15 @@
             </div>
         </div>
 
-        <!-- 辅助元素，一般用于移动设备下遮罩 -->
         <div class="layadmin-body-shade" layadmin-event="shade"></div>
     </div>
 </div>
 <script th:src="@{/layuiadmin/layui/layui.js}" src="../static/layuiadmin/layui/layui.js"></script>
 <script>
     layui.config({
-        base: '/restaurant/layuiadmin/' //静态资源所在路径
+        base: '/restaurant/layuiadmin/' 
     }).extend({
-        index: 'lib/index' //主入口模块
+        index: 'lib/index' 
     }).use('index');
 </script>
 </body>
