--- a/restaurant/src/main/resources/templates/error/403.html
+++ b/restaurant/src/main/resources/templates/error/403.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>404 页面不存在</title>
+    <title>404 ERROR</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -16,7 +15,7 @@
     <div class="layadmin-tips">
         <i class="layui-icon" face>&#xe664;</i>
         <div style="font-size: 20px;">
-            没有权限
+            Permission Denied
         </div>
         <div class="layui-text">
             <h1>
